--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-I want coffee!
+<html>
+
+  <head>
+   <title>
+     Lucy Fries' Portfolio Page
+   </title>
+  </head>
+    
+<body>
+
+  <h1>Lucy Fries - Magazine, News & Digital Journalism Major in the Newhouse School of Public Communications</h1>
+  <p>With the arrival of a new season comes the revival of classic wardrobe pieces. There have been an abundance of fashion trends that have resurfaced, such as Boho-Chic and denim styles, but the most recent look receiving attention this fall is the horse girl aesthetic. Vogue’s recent October issue features models Gigi Hadid and Kendall Jenner on a western-inspired cover. More attention is brought to the fluidity and composure of horseback riding as the trend is being embraced by the fashion industry, allowing the sport to be used in photo shoots and the style to be showcased. Because of this, many Western Boho-Chic looks are emerging as major fashion trends, even making their way to New York Fashion Week. </p>
+
+<p>Vogue’s Western-style shoot hones in on nature, bringing in flowy gowns and models galloping in photo sessions. Not only was the style used to showcase the outfits, Vogue made it apparent that while modeling and horseback riding are different hobbies, they share many similar attributes, both demanding control and resilience. With the sport being used in the fashion industry, many models have even taken it upon themselves to become self-proclaimed riders. Kendall Jenner shared that the stables act as a sanctuary to clear her mind, while others may favor the more competitive nature that is associated with it. Both Bella and Gigi Hadid took after their mother, Yolanda, and share a love for the sport, with Bella even competing in rodeos.</p>
+</body>
+
+</html>
