--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h1>Lucy Fries<h1> 
   <h2>Magazine, News & Digital Journalism Major in the Newhouse School of Public Communications</h2>
 
-
+  <img src="personal image.jpeg"/>
 
     <br/>
   
