--- a/index.html
+++ b/index.html
@@ -21,5 +21,12 @@
 </body>
 
 <a href="https://www.fetchcollectivemag.com/post/the-rise-of-the-horse-girl-aesthetic/">Click to read more</a>
+
+<h2> Schools Attended</h2>
+<ul>
+  <li>Disney 2 Magnet School</li>
+  <li>DePaul College Prep</li>
+  <li>Syracuse University</li>
+</ul>
     
 </html>
