--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <p>Vogue’s Western-style shoot hones in on nature, bringing in flowy gowns and models galloping in photo sessions. Not only was the style used to showcase the outfits, Vogue made it apparent that while modeling and horseback riding are different hobbies, they share many similar attributes, both demanding control and resilience. With the sport being used in the fashion industry, many models have even taken it upon themselves to become self-proclaimed riders. Kendall Jenner shared that the stables act as a sanctuary to clear her mind, while others may favor the more competitive nature that is associated with it. Both Bella and Gigi Hadid took after their mother, Yolanda, and share a love for the sport, with Bella even competing in rodeos...</p>
 </body>
 
-<a href="https://www.fetchcollectivemag.com/post/the-rise-of-the-horse-girl-aesthetic/">Click to read more</a>
+<a href="https://www.fetchcollectivemag.com/post/the-rise-of-the-horse-girl-aesthetic/" target="_blank">Click to read more</a>
 
 <h2> Schools Attended</h2>
 <ul>
