--- a/assignment6/index.html
+++ b/assignment6/index.html
@@ -1,13 +1,13 @@
 <html>
 
   <head>
-   <title> Sub-Saharan Africa Troop Deployment 1953-1976 </title>
+   <title></title>
   </head>
     
 <body>
 
-  <h1>Lucy Fries<h1> 
-  <h2></h2>
+  <h1>Sub-Saharan Africa Troop Deployment 1953-1976<h1> 
+  <h2>Lucy Fries</h2>
 
   <img />
 
