--- a/assignment6/index.html
+++ b/assignment6/index.html
@@ -6,7 +6,7 @@
     
 <body>
 
-  <h1>Sub-Saharan Africa Troop Deployment 1953-1976<h1> 
+  <h1>Data Analysis: Sub-Saharan Africa Troop Deployment 1953-1976<h1> 
   <h2>Lucy Fries</h2>
 
   <img />
