--- a/page1/index.html
+++ b/page1/index.html
@@ -2,7 +2,7 @@
 
   <head>
   <title>Lucy Fries' Portfolio Page</title>
-  <link rel="stylesheet" href="../main.css">
+  <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
