--- a/page1/about/index.html
+++ b/page1/about/index.html
@@ -2,27 +2,51 @@
 
   <head>
   <title>Lucy Fries' Portfolio Page</title>
+
+  <!-- BOOTSTRAP  CODE-->
+   
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+<body>
+  
   <link rel="stylesheet" href="main.css">
 </head>
 
- 
- <div class="container">
 
-      <div class="row">
 
-        <header class="newheader">
 
-            Meet Lucy Fries |  JNL 221 |  <a href="../index.html">Home</a> 
 
-        </header>
+<!--BOOTSTRAP NAV BAR CODE-->
 
-      </div>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Lucy Fries | </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../work/index.html">Work</a>
+        </li>
+         <li class="nav-item">
+          <a class="nav-link" href="../assignments/index.html">Assignments</a>
+        </li>
+         <li class="nav-item">
+          <a class="nav-link" href="../final/index.html">Final</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
 
     
-<body>
 
-  <h1>About Lucy Fries<h1> 
+
+  <h1>About Lucy Fries</h1> 
 
 
   
@@ -31,7 +55,7 @@
   During her time in Highschool, she was a staff writer and sports section editor for her school's publication which sparked her love for writing. She decided to continue that path as a journalism major, and still integrates herself in on-campus publications. She is currently apart of University Girl, a student-run publication, working as a print and digital Graphic Designer. She is also apart of the editorial team for Fetch Collective, where she is a staff-writer covering culture, beauty, fashion, and news topics. </p>
 
 
-</body>
+
 
 
 <h2> Schools Attended</h2>
@@ -42,9 +66,12 @@
 </ul>
 
 
-<link rel="stylesheet" href="style.css">
+<!--LAYOUT ENDS HERE-->
+        
+          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 
-<link rel="stylesheet" href="main.css">
+
+</body>
 
 
 
