--- a/page1/work/index.html
+++ b/page1/work/index.html
@@ -2,21 +2,58 @@
 
   <head>
   <title>Lucy Fries' Portfolio Page</title>
-  <link rel="stylesheet" href="main.css">
+
+
+<!-- BOOTSTRAP  CODE-->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+
+
+<link rel="stylesheet" href="main.css">
+
+
 </head>
 
+
+
+
+
+<body>
+
+
+<!--BOOTSTRAP NAVBAR CODE-->
+
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Lucy Fries </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="../about/index.html">About</a>
+        </li>
+         <li class="nav-item">
+          <a class="nav-link" href="../assignments/index.html">Assignments</a>
+        </li>
+        </li>
+         <li class="nav-item">
+          <a class="nav-link" href="../final/index.html">Final</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<!--NAV BAR CODE ENDS HERE-->
+
+
+
  
- <div class="container">
 
-      <div class="row">
-
-        <header class="newheader">
-
-            Meet Lucy Fries |  JNL 221 |  <a href="../index.html">Home</a> 
-
-        </header>
-
-      </div>
 
 
   
@@ -54,11 +91,14 @@
 
 
 
-
-
-<link rel="stylesheet" href="style.css">
-
 <link rel="stylesheet" href="main.css">
+
+<!--LAYOUT ENDS HERE-->
+        
+          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+
+
+</body>
 
 
 
