--- a/page1/index.html
+++ b/page1/index.html
@@ -2,28 +2,57 @@
 
   <head>
   <title>Lucy Fries' Portfolio Page</title>
+
+<!-- BOOTSTRAP  CODE-->
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+
   <link rel="stylesheet" href="main.css">
+
 </head>
+
+
+
 
 <body>
 
-  <div class="container">
+<!--BOOTSTRAP NAVBAR CODE-->
 
-      <div class="row">
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Lucy Fries </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="about/index.html">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="work/index.html">Work</a>
+        </li>
+         <li class="nav-item">
+          <a class="nav-link" href="assignments/index.html">Assignments</a>
+        </li>
+        </li>
+         <li class="nav-item">
+          <a class="nav-link" href="final/index.html">Final</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
-        <header class="newheader">
+<!--NAV BAR CODE ENDS HERE-->
 
-            Meet Lucy Fries |  JNL 221 | 
-             <a href="about/index.html">About</a> |
-             <a href="work/index.html">Work</a> |
-             <a href="assignments/index.html">Assignments</a> |
-             <a href="final/index.html">Final</a>
-</header>
 
-        </header>
 
-      </div>
-    
+
+
+<body>
+
+  
 
 
   <h1>Lucy Fries</h1> 
@@ -67,6 +96,11 @@
 
 
           </div>
+
+
+          <!--LAYOUT ENDS HERE-->
+        
+          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 
 
           </body>
