--- a/page1/page1/about/index.html
+++ b/page1/page1/about/index.html
@@ -2,15 +2,17 @@
 
   <head>
   <title>Lucy Fries' Portfolio Page</title>
+
+  <!-- BOOTSTRAP  CODE-->
+   
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+<body>
+  
   <link rel="stylesheet" href="main.css">
 </head>
 
-<body>
 
 
-<!-- BOOTSTRAP  CODE-->
-
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
 
 <!--BOOTSTRAP NAV BAR CODE-->
@@ -42,9 +44,9 @@
 
 
     
-<body>
 
-  <h1>About Lucy Fries<h1> 
+
+  <h1>About Lucy Fries</h1> 
 
 
   
@@ -53,7 +55,7 @@
   During her time in Highschool, she was a staff writer and sports section editor for her school's publication which sparked her love for writing. She decided to continue that path as a journalism major, and still integrates herself in on-campus publications. She is currently apart of University Girl, a student-run publication, working as a print and digital Graphic Designer. She is also apart of the editorial team for Fetch Collective, where she is a staff-writer covering culture, beauty, fashion, and news topics. </p>
 
 
-</body>
+
 
 
 <h2> Schools Attended</h2>
@@ -63,10 +65,6 @@
   <li>Syracuse University</li>
 </ul>
 
-
-<link rel="stylesheet" href="style.css">
-
-<link rel="stylesheet" href="main.css">
 
 <!--LAYOUT ENDS HERE-->
         
